Refactor QuadricToEllipsoid
QTE now uses JOML